# file_transfer

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: FileReader.h  FileWriter.h  IFile.h  IHandler.h  IObserver.h  ISocket.h  IWorker.h  definitions.h
src/: FileReader.cpp  FileWriter.cpp  IFile.cpp  ISocket.cpp  IWorker.cpp
